cluster/apps/social/lemmy/routing/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lemmy-ingress
  namespace: social
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_PUBLIC_DOMAIN}"
    external-dns/is-public: "true"
spec:
  ingressClassName: traefik
  rules:
    - host: lemmy.${SECRET_PUBLIC_DOMAIN}
      http:
        paths:
          - path: /api/
            pathType: Prefix
            backend:
              service:
                name: lemmy
                port:
                  number: 8536
          - path: /pictrs/
            pathType: Prefix
            backend:
              service:
                name: lemmy
                port:
                  number: 8536
          - path: /feeds/
            pathType: Prefix
            backend:
              service:
                name: lemmy
                port:
                  number: 8536
          - path: /nodeinfo/
            pathType: Prefix
            backend:
              service:
                name: lemmy
                port:
                  number: 8536
          - path: /.well-known/
            pathType: Prefix
            backend:
              service:
                name: lemmy
                port:
                  number: 8536
          - path: /
            pathType: Prefix
            backend:
              service:
                name: lemmy-ui
                port:
                  number: 1234
          -
